Edits before format review

--- a/abstract.tex
+++ b/abstract.tex
@@ -6,7 +6,7 @@ in fuel salt regions. Simulating the complex multiphysics interactions in
 designs also still retain control rods which can complicate time-dependent reactivity-initiated
 transient simulations on reactor software relying on neutron diffusion theory.
 This work builds on existing capabilities in Moltres, a MOOSE-based \gls{MSR} simulation software,
-to tackle these challenges and support efforts towards \gls{MSR} deployment.
+to address these challenges and support efforts towards \gls{MSR} deployment.
 
 This work verified and validated existing multiphysics coupling capabilities in Moltres in two
 comparative studies. In both studies, Moltres showed good agreement with other \gls{MSR} simulation tools
@@ -23,8 +23,8 @@ rod worth estimates, relative to reference neutron transport solutions and exper
 at approximately four times the computational cost of the neutron diffusion method.
 %Demonstrations of the hybrid method for time-dependent rod drop and reactivity insertion
 %simulations also performed well in reproducing expected trends observed in experimental data.
-A demonstration of the hybrid method for a time-dependent rod drop
-simulation also performed well in reproducing expected trends observed in experimental data.
+The hybrid method also performed well in a time-dependent rod drop simulation
+by reproducing expected trends observed in experimental data.
 Analysis of its computational performance indicated the possibility of further optimizations
 beyond its current implementation. With the hybrid method's spatial resolution and
 efficient computational performance, Moltres could enable accurate and cost-effective simulations
