--- a/appendix.tex
+++ b/appendix.tex
@@ -394,3 +394,35 @@ due to the small font.
   \label{fig:123-rod}
 \end{figure}
 
+\chapter{3-D \gls{MSRE} Neutron Flux Distributions}
+
+This appendix contains figures showing the group 1 and 8 neutron flux distributions in the 3-D
+\gls{MSRE} full-core model with Rod 1 inserted by 27.5 and 51 inches.
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\columnwidth]{halfway-g1}
+  \caption{Group 1 neutron flux distribution with Rod 1 inserted by 27.5 inches.}
+  \label{fig:halfway-g1}
+\end{figure}
+  
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\columnwidth]{halfway-g8}
+  \caption{Group 8 neutron flux distribution with Rod 1 inserted by 27.5 inches.}
+  \label{fig:halfway-g8}
+\end{figure}
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\columnwidth]{inserted-g1}
+  \caption{Group 1 neutron flux distribution with Rod 1 inserted by 51 inches.}
+  \label{fig:inserted-g1}
+\end{figure}
+  
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\columnwidth]{inserted-g8}
+  \caption{Group 8 neutron flux distribution with Rod 1 inserted by 51 inches.}
+  \label{fig:inserted-g8}
+\end{figure}
