--- a/main.tex
+++ b/main.tex
@@ -86,7 +86,7 @@
 \department{Nuclear, Plasma \& Radiological Engineering}
 \degreeyear{2024}
 \committee{Associate Professor Kathryn D. Huff, Co-Chair \\
-           Assistant Professor Madicken Munk, Co-Chair \\
+           Assistant Professor Madicken Munk, Co-Chair, Oregon State University \\
            Professor Rizwan Uddin \\
            Professor Tomasz Kozlowski \\
            Professor Paul Fischer}
@@ -112,7 +112,7 @@
 
 \begin{acknowledgments}
 
-%\input{acks}
+\input{acks}
 
 \end{acknowledgments}
 \addcontentsline{toc}{chapter}{Acknowledgments}
