--- a/msre-pump.tex
+++ b/msre-pump.tex
@@ -336,7 +336,7 @@ that Moltres and QuasiMolto produced nearly identical results, despite significa
 their numerical schemes, lends credibility to both sets of results for the purpose of code
 verification.
 
-\begin{figure}[b]
+\begin{figure}[t]
   \centering
   \includegraphics[width=0.8\columnwidth]{coast-down-v2-reactivity}
   \caption{Reactivity loss (relative to static no-flow conditions) during the \gls{MSRE} pump
