--- a/turbulence.tex
+++ b/turbulence.tex
@@ -24,12 +24,15 @@ correction reduces eddy viscosity in regions of rotational but non-turbulent flo
 original Spalart-Allmaras model overestimates eddy viscosity. The Spalart-Allmaras model implementation in Moltres
 solves for the modified dynamic viscosity $\tilde{\mu}$ (as opposed to $\tilde{\nu}$) as follows:
 
-\begin{gather}
+\pagebreak
+\begin{multline}
   \rho \frac{\partial\tilde{\mu}}{\partial t} + \rho \mathbf{u}\cdot\nabla\tilde{\mu} = \rho c_{b1}
-  \left(1-f_{t2}\right)\tilde{S}\tilde{\mu} + \frac{1}{\sigma}\{\nabla\cdot\left[\left(\mu+
+  \left(1-f_{t2}\right)\left[\tilde{S}+C_\text{rot}\min(0,S-\Omega)\right]\tilde{\mu} \\ + \frac{1}{\sigma}\{\nabla\cdot\left[\left(\mu+
   \tilde{\mu}\right)\nabla\tilde{\mu}\right] + c_{b2}|\nabla\tilde{\mu}|^2\} - \left(c_{w1}f_w -
   \frac{c_{b1}}{\kappa^2}f_{t2}\right)\left(
   \frac{\tilde{\mu}}{d}\right)^2
+\end{multline}
+\begin{gather}
   \shortintertext{where}
   \begin{align*}
     \mu_t &= \tilde{\mu}f_{v1} = \text{turbulent eddy viscosity}, \\
@@ -49,7 +52,7 @@ solves for the modified dynamic viscosity $\tilde{\mu}$ (as opposed to $\tilde{\
   \sigma = \frac{2}{3}, \ c_{b1} = 0.1355, \ c_{b2} = 0.622, \ \kappa = 0.41, \
   c_{w1} = \frac{c_{b1}}{\kappa^2} + \frac{1+c_{b2}}{\sigma}, \nonumber \\
   c_{w2} = 0.3, \ c_{w3} = 2, \
-  c_{v1} = 7.1, \ c_{t3} = 1.2, \ c_{t4} = 0.5 \ \text{.} \nonumber
+  c_{v1} = 7.1, \ c_{t3} = 1.2, \ c_{t4} = 0.5, \ C_\text{rot} = 2 \ \text{.} \nonumber
 \end{gather}
 
 The $f_{t2}$ turbulence trip term is togglable using the \texttt{use\_ft2\_term} input parameter
@@ -86,24 +89,7 @@ automatically terminated at $t=186$ s when Moltres detected that the flow profil
 steady-state, i.e., the flow and turbulent viscosity distributions remained unchanged between
 successive timesteps.
 
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=0.9\columnwidth]{channel-geom}
-  \caption{Channel geometry for the turbulent channel flow verification test. The red box indicates
-  the region shown by the close-up view in Figure \ref{fig:channel-mesh}.}
-  \label{fig:channel-geom}
-%\end{figure}
-%%
-%\begin{figure}[htb!]
-  \centering
-  \includegraphics[width=\columnwidth]{channel_mesh}
-  \caption{Close-up view of the refined mesh near the inlet (left boundary) for the channel flow
-    test. The mesh for the rest of the channel follows the mesh resolution of the rightmost column
-  of elements.}
-  \label{fig:channel-mesh}
-\end{figure}
-
-\begin{table}[htb]
+\begin{table}[h]
   \centering
   \small
   \caption{Relevant turbulent channel flow problem parameters. The $\tilde{\mu}_\text{inlet}$ value
@@ -126,11 +112,25 @@ successive timesteps.
 
 Figure \ref{fig:channel-verification} shows plots of normalized and nondimensionalized velocities,
 wall distances, and stresses from the \gls{DNS} data \cite{moser_direct_1999}
-and the Moltres Spalart-Allmaras model. The Moltres Spalart-Allmaras model is largely consistent with the reference
+and the Moltres Spalart-Allmaras model. Moltres is largely consistent with the reference
 \gls{DNS} flow data and reproduces the expected trends in the velocity and stress distributions
 across the channel and as a function of the wall distance.
+%
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=.85\columnwidth]{channel-geom}
+  \caption{Channel geometry for the turbulent channel flow verification test. The red box indicates
+  the region shown by the close-up view in Figure \ref{fig:channel-mesh}.}
+  \label{fig:channel-geom}
+  \vspace{.5cm}
+  \includegraphics[width=\columnwidth]{channel_mesh}
+  \caption{Close-up view of the refined mesh near the inlet (left boundary) for the channel flow
+    test. The mesh for the rest of the channel follows the mesh resolution of the rightmost column
+  of elements.}
+  \label{fig:channel-mesh}
+\end{figure}
 
-\begin{figure}[htb!]
+\begin{figure}[p]
   \centering
   \begin{subfigure}[b]{0.48\columnwidth}
     \centering
@@ -156,6 +156,8 @@ across the channel and as a function of the wall distance.
   the reference data.}
   \label{fig:channel-verification}
 \end{figure}
+
+\FloatBarrier
 
 \subsection{Turbulent Pipe Flow Validation Test}
 
@@ -233,11 +235,11 @@ successive timesteps.
 
 Figure \ref{fig:pipe-verification} shows plots of normalized and nondimensionalized velocities,
 wall distances, and stresses from the experimental data \cite{laufer_structure_1954}
-and the Moltres Spalart-Allmaras model. The Moltres Spalart-Allmaras model is largely consistent with the reference
+and the Moltres Spalart-Allmaras model. Moltres is largely consistent with the reference
 experimental flow data and reproduces the expected trends in the velocity and stress distributions
 across the channel and as a function of the wall distance.
 
-\begin{figure}[htb]
+\begin{figure}[p]
   \centering
   \begin{subfigure}[b]{0.48\columnwidth}
     \centering
@@ -277,36 +279,6 @@ does not contain the rotation correction scheme
 \cite{aupoix_extensions_2003, dacles-mariani_numericalexperimental_1995} present in the Moltres
 Spalart-Allmaras model.
 
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=0.9\columnwidth]{backstep-geom}
-  \caption{Backward step geometry for the turbulent \gls{BFS} flow verification test. The red box indicates
-  the region shown by the close-up view in Figure \ref{fig:bfs-mesh}.}
-  \label{fig:backstep-geom}
-%\begin{figure}[htb!]
-  \centering
-  \includegraphics[width=0.9\columnwidth]{bfs_mesh}
-  \caption{Close-up view of the mesh for the \gls{BFS} flow test. The step is situated at $x=110$ m
-  with a height of $H=1$ m.}
-  \label{fig:bfs-mesh}
-\end{figure}
-
-The Moltres model for this test is a 2-D 160 m-long channel (Figure \ref{fig:backstep-geom}.
-The main flow direction is in the
-positive $x$ direction with the inlet and outlet on the left and right ends, respectively. The
-channel is 8 m tall before the 1 m-tall step at $x=110$ m. Figure \ref{fig:bfs-mesh} shows a
-close-up view of the mesh around the step. The dimensionless wall distance parameter $y^+$ of the
-first mesh elements along wall boundaries just prior to the step and at the end of the channel are
-0.735 and 0.555, respectively, meeting the $y^+ \lesssim 1$ requirement for properly wall-resolved
-flow. Table \ref{table:bfs} lists relevant flow parameters for the turbulent \gls{BFS} flow test.
-The Moltres \gls{BFS} flow model ran as two separate simulations for the upstream turbulent flow
-profile to fully develop from $x=0$ m to $x=104$ m and the \gls{BFS} flow profile from $x=104$ m to
-$x=160$ m. The fully-developed flow profile at $x=104$ m from the first simulation served as the
-inlet flow profile for the second simulation. Both simulations ran with adaptive time-stepping
-starting from a timestep size of 0.1 s up to a maximum timestep size of 10 s with a timestep size
-growth factor of 1.1. The upstream and \gls{BFS} simulations automatically terminated at $t=212$ s
-and $t=223$ s when Moltres detected that the flow profiles reached steady-state.
-
 \begin{table}[htb]
   \centering
   \small
@@ -327,6 +299,36 @@ and $t=223$ s when Moltres detected that the flow profiles reached steady-state.
   \end{tabular}
   \label{table:bfs}
 \end{table}
+
+The Moltres model for this test is a 2-D 160 m-long channel (Figure \ref{fig:backstep-geom}.
+The main flow direction is in the
+positive $x$ direction with the inlet and outlet on the left and right ends, respectively. The
+channel is 8 m tall before the 1 m-tall step at $x=110$ m. Figure \ref{fig:bfs-mesh} shows a
+close-up view of the mesh around the step. The dimensionless wall distance parameter $y^+$ of the
+first mesh elements along wall boundaries just prior to the step and at the end of the channel are
+0.735 and 0.555, respectively, meeting the $y^+ \lesssim 1$ requirement for properly wall-resolved
+flow. Table \ref{table:bfs} lists relevant flow parameters for the turbulent \gls{BFS} flow test.
+The Moltres \gls{BFS} flow model ran as two separate simulations for the upstream turbulent flow
+profile to fully develop from $x=0$ m to $x=104$ m and the \gls{BFS} flow profile from $x=104$ m to
+$x=160$ m. The fully-developed flow profile at $x=104$ m from the first simulation served as the
+inlet flow profile for the second simulation. Both simulations ran with adaptive time-stepping
+starting from a timestep size of 0.1 s up to a maximum timestep size of 10 s with a timestep size
+growth factor of 1.1. The upstream and \gls{BFS} simulations automatically terminated at $t=212$ s
+and $t=223$ s when Moltres detected that the flow profiles reached steady-state.
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=0.87\columnwidth]{backstep-geom}
+  \caption{Backward step geometry for the turbulent \gls{BFS} flow verification test. The red box indicates
+  the region shown by the close-up view in Figure \ref{fig:bfs-mesh}.}
+  \label{fig:backstep-geom}
+%\begin{figure}[htb!]
+  \centering
+  \includegraphics[width=0.87\columnwidth]{bfs_mesh}
+  \caption{Close-up view of the mesh for the \gls{BFS} flow test. The step is situated at $x=110$ m
+  with a height of $H=1$ m.}
+  \label{fig:bfs-mesh}
+\end{figure}
 
 Figure \ref{fig:bfs} shows the velocity magnitude and streamlines around the step at $x=110$ m. The
 streamlines illustrate the recirculation zones created by flow separation past the step.
@@ -380,14 +382,14 @@ Spalart-Allmaras model are within expectations of a \gls{RANS}-based model.
 \begin{figure}[htb]
   \centering
   \hfill
-  \begin{subfigure}[b]{0.38\columnwidth}
+  \begin{subfigure}[b]{0.369\columnwidth}
     \centering
     \includegraphics[width=\columnwidth]{bfs_upstream_vel}
     \caption{Normalized velocity distribution at $x/H=-4$ upstream of step.}
     \label{fig:bfs-upstream}
   \end{subfigure}
   \hfill
-  \begin{subfigure}[b]{0.38\columnwidth}
+  \begin{subfigure}[b]{0.369\columnwidth}
     \centering
     \includegraphics[width=\columnwidth]{bfs_downstream_vel}
     \caption{Normalized velocity distributions downstream of step.}
@@ -395,21 +397,21 @@ Spalart-Allmaras model are within expectations of a \gls{RANS}-based model.
   \end{subfigure} \hfill \\
   \centering
   \hfill
-  \begin{subfigure}[b]{0.38\columnwidth}
+  \begin{subfigure}[b]{0.369\columnwidth}
     \centering
     \includegraphics[width=\columnwidth]{bfs_cf}
     \caption{Skin friction coefficient along the bottom wall.}
     \label{fig:bfs-cf}
   \end{subfigure}
   \hfill
-  \begin{subfigure}[b]{0.38\columnwidth}
+  \begin{subfigure}[b]{0.369\columnwidth}
     \centering
     \includegraphics[width=\columnwidth]{bfs_cp}
     \caption{Skin pressure coefficient along the bottom wall.}
     \label{fig:bfs-cp}
   \end{subfigure} \hfill \\
   \centering
-  \begin{subfigure}[b]{0.38\columnwidth}
+  \begin{subfigure}[b]{0.369\columnwidth}
     \centering
     \includegraphics[width=\columnwidth]{bfs_stress}
     \caption{Normalized turbulent shear stress distributions downstream
@@ -417,10 +419,12 @@ Spalart-Allmaras model are within expectations of a \gls{RANS}-based model.
     \label{fig:bfs-stress}
   \end{subfigure}
   \caption{Comparison of backward facing step flow results against reference
-  experimental data and computational data from CFL3D. $x/H$ values are normalized horizontal
+  experimental data and computational data from CFL3D. $x/H$ values are normalized
   distances relative to the step.}
   \label{fig:bfs-plots}
 \end{figure}
+
+\FloatBarrier
 
 \subsection{Summary}
 
